# aLEAKator

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md
CPUs/: CMakeLists.txt  program_setup.h
CPUs/aubrac/: CMakeLists.txt  README.md  aubrac_include.h  aubrac_program.h  prepare.sh  rtl  simulate.cpp  synth.tcl
CPUs/aubrac/programs/: link.ld  startup.S
CPUs/aubrac/programs/aes_herbst/: aes_herbst.c  aes_herbst_setup.cpp  aes_herbst_setup.h
CPUs/aubrac/programs/aes_herbst_unsecure/: aes_herbst_unsecure.c  aes_herbst_unsecure_setup.cpp  aes_herbst_unsecure_setup.h
CPUs/aubrac/programs/dom_and/: dom_and_setup.cpp  dom_and_setup.h
CPUs/aubrac/programs/dom_and_unsecure/: dom_and_unsecure.S  dom_and_unsecure_setup.cpp  dom_and_unsecure_setup.h
CPUs/aubrac/programs/secmult/: secmult.S  secmult_setup.cpp  secmult_setup.h
CPUs/aubrac/programs/secmult_unsecure/: secmult_unsecure.S  secmult_unsecure_setup.cpp  secmult_unsecure_setup.h
CPUs/aubrac/programs/simple/: simple.S  simple_setup.cpp  simple_setup.h
CPUs/coco-ibex/: CMakeLists.txt  README.md  coco-ibex_program.h  prepare.sh  rtl  simulate.cpp  synth.ys
CPUs/coco-ibex/programs/: .gitignore  link.ld  startup.S
CPUs/coco-ibex/programs/dom_and/: dom_and.S  dom_and_setup.cpp  dom_and_setup.h
CPUs/coco-ibex/programs/dom_and_unsecure/: dom_and_unsecure.S  dom_and_unsecure_setup.cpp  dom_and_unsecure_setup.h
CPUs/coco-ibex/programs/secmult/: secmult.S  secmult_setup.cpp  secmult_setup.h
CPUs/coco-ibex/programs/secmult_unsecure/: secmult_unsecure.S  secmult_unsecure_setup.cpp  secmult_unsecure_setup.h
CPUs/cortex_m3/: CMakeLists.txt  cortex_m3_program.h  patch_cortex_m3.patch  prepare.sh  rtl  simulate.cpp  synth.ys
CPUs/cortex_m3/programs/: link.ld  remove_s_instructions.sed
CPUs/cortex_m3/programs/aes_herbst/: CMakeLists.txt  aes_herbst.c  aes_herbst.patch  aes_herbst_setup.cpp  aes_herbst_setup.h
CPUs/cortex_m3/programs/aes_herbst_unsecure/: CMakeLists.txt  aes_herbst_unsecure.patch  aes_herbst_unsecure_setup.cpp  aes_herbst_unsecure_setup.h
CPUs/cortex_m3/programs/calibration/: calibration_setup.cpp  calibration_setup.h
CPUs/cortex_m3/programs/dom_and/: dom_and.S  dom_and_setup.cpp  dom_and_setup.h
CPUs/cortex_m3/programs/dom_and_GPR/: dom_and_GPR.S  dom_and_GPR_setup.cpp  dom_and_GPR_setup.h
CPUs/cortex_m3/programs/secmult/: secmult.S  secmult_setup.cpp  secmult_setup.h
CPUs/cortex_m3/programs/secmult_unsecure/: secmult_unsecure.S  secmult_unsecure_original.S  secmult_unsecure_setup.cpp  secmult_unsecure_setup.h
CPUs/cortex_m4/: CMakeLists.txt  cortex_m4_program.h  patch_cortex_m4.patch  prepare.sh  rtl  simulate.cpp  synth.ys
CPUs/cortex_m4/programs/: .gitignore  link.ld  startup.S
CPUs/cortex_m4/programs/aes_herbst/: aes_herbst.patch  aes_herbst_setup.cpp  aes_herbst_setup.h
CPUs/cortex_m4/programs/aes_herbst_unsecure/: aes_herbst_unsecure.c  aes_herbst_unsecure.patch  aes_herbst_unsecure_setup.cpp  (+1 more)
CPUs/cv32e40p/: CMakeLists.txt  README.md  cv32e40p_program.h  patch_cv32e40p.patch  prepare.sh  rtl  simulate.cpp  synth.ys
CPUs/cv32e40p/programs/: link.ld  startup.S
CPUs/ibex/: CMakeLists.txt  README.md  ibex_program.h  patch_ibex.patch  prepare.sh  rtl  simulate.cpp  synth.ys
CPUs/ibex/programs/: link.ld
accelerators/: CMakeLists.txt
accelerators/aleakator/and/: CMakeLists.txt  README.md  and.v  simulate.cpp
accelerators/aleakator/and_dom/: CMakeLists.txt  README.md  and_dom.v  simulate.cpp
accelerators/aleakator/and_dom_2d/: CMakeLists.txt  README.md  and_dom_2d.v  simulate.cpp
accelerators/aleakator/and_dom_5d/: CMakeLists.txt  README.md  and_dom_5d.v  simulate.cpp
accelerators/aleakator/and_dom_sync/: CMakeLists.txt  README.md  and_dom_sync.v  simulate.cpp
accelerators/aleakator/and_dom_sync_2d/: CMakeLists.txt  README.md  and_dom_sync_2d.v  simulate.cpp
accelerators/aleakator/and_dom_wo_reg/: CMakeLists.txt  README.md  and_dom_wo_reg.v  simulate.cpp
accelerators/aleakator/and_isw/: CMakeLists.txt  README.md  and_isw.v  simulate.cpp
accelerators/aleakator/and_isw_2d/: CMakeLists.txt  README.md  and_isw_2d.v  simulate.cpp
accelerators/aleakator/dff/: CMakeLists.txt  README.md  dff.v  simulate.cpp
accelerators/aleakator/triple_xor/: CMakeLists.txt  README.md  simulate.cpp  triple_xor.v
accelerators/aleakator/triple_xor_reg/: CMakeLists.txt  README.md  simulate.cpp  triple_xor_reg.v
accelerators/coco/aes_dom/: CMakeLists.txt  README.md  rtl  simulate.cpp
accelerators/coco/prince_ti/: CMakeLists.txt  README.md  rtl  simulate.cpp
accelerators/coco/prince_ti_secure/: CMakeLists.txt  README.md  rtl  simulate.cpp
accelerators/prolead/PRESENT_Enc_TI_d1_Not_Uniform/: CMakeLists.txt  README.md  rtl  simulate.cpp
accelerators/prolead/PRESENT_Enc_TI_d1_Uniform/: CMakeLists.txt  README.md  rtl  simulate.cpp
accelerators/sboxes/prolead-AES_Sbox_DOM_d1/: CMakeLists.txt  README.md  rtl  simulate.cpp
accelerators/sboxes/prolead-AES_Sbox_DOM_d2/: CMakeLists.txt  README.md  rtl  simulate.cpp
accelerators/sboxes/prolead-PRESENT_Sbox_TI_d1_Not_Uniform/: CMakeLists.txt  README.md  rtl  simulate.cpp
accelerators/sboxes/prolead-PRESENT_Sbox_TI_d1_Uniform/: CMakeLists.txt  README.md  rtl  simulate.cpp
accelerators/sboxes/prover-KECCAK_Sbox_DOM_d1/: CMakeLists.txt  README.md  rtl  simulate.cpp
accelerators/sboxes/prover-KECCAK_Sbox_DOM_d2/: CMakeLists.txt  README.md  rtl  simulate.cpp
accelerators/sboxes/prover-KECCAK_Sbox_DOM_d3/: CMakeLists.txt  README.md  rtl  simulate.cpp
accelerators/sboxes/prover-PRESENT_Sbox_TI_d1_Not_Uniform/: CMakeLists.txt  README.md  rtl  simulate.cpp
accelerators/sboxes/prover-PRESENT_Sbox_TI_d1_Uniform/: CMakeLists.txt  README.md  rtl  simulate.cpp
cxxrtl/: cxxrtl.h
libs/: CMakeLists.txt
libs/aleakator/: configuration.cpp  configuration.h  manager.cpp  manager.h
libs/lss/: lss.cpp  lss.h
utests/: CMakeLists.txt
utests/leakset_bit/all_leaksets_bit/: simulate.cpp
utests/stability/arithmetic/: simulate.cpp
utests/stability/bitwise/: simulate.cpp
utests/stability/size_ops/: simulate.cpp
(+50 files in other folders)
